--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,14 @@ section > #data{
     font-size: 15px;
     font-weight: 800;
 }
+
+
+/* Photos */
+#tim{
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+figcaption{
+    font-size: 12px;
+}
