--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,33 @@ figcaption{
     font-size: 20px;
     font-weight: 600;
 }
+
+/* table */
+.thead{
+    background-color: rgb(0, 153, 255);
+    width: 1500px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.thead > .thead-text{
+    margin-right: 220px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.tbody{
+    background-color: rgb(139, 209, 255);
+    width: 1500px;
+    height: 100px;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.tbody > .tbody-text{
+    font-weight: bold;
+    margin-right: 220px;
+    color: black;
+    font-size: 18px;
+}
