--- a/css/style.css
+++ b/css/style.css
@@ -77,31 +77,29 @@ figcaption{
 }
 
 /* table */
-.thead{
-    background-color: rgb(0, 153, 255);
-    width: 1500px;
+table{
+    text-align: left;
     margin-left: 10px;
     margin-right: 10px;
+    table-layout: fixed;
+    width: 100%;
 }
 
-.thead > .thead-text{
-    margin-right: 220px;
+th, td{
+    padding: 5px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+th{
+    background-color: rgb(0, 153, 255);
     color: white;
-    font-weight: bold;
-    font-size: 18px;
 }
 
-.tbody{
-    background-color: rgb(139, 209, 255);
-    width: 1500px;
-    height: 100px;
-    margin-left: 5px;
-    margin-right: 10px;
+.blue-cell{
+    background-color: rgb(163, 229, 255);
 }
 
-.tbody > .tbody-text{
-    font-weight: bold;
-    margin-right: 220px;
-    color: black;
-    font-size: 18px;
+.white-cell{
+    background-color: #fff
 }
