--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,34 @@ th{
 .white-cell{
     background-color: #fff
 }
+
+/* Footer */
+.footer-container{
+    width: 400px;
+    height: 210px;
+    position: relative;
+}
+
+#interessi{
+    margin-left: 10px;
+    font-size: 20px;
+    color:rgb(146, 137, 137);
+    font-weight: bold;
+}
+
+.footer-image{
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 200px;
+    width: 250px;
+    position: absolute;
+}
+
+.footer-text-image{
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    top: 20px;
+    left: 25px;
+}
